--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="./script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
+    <script type="module" src="render.js" defer></script>
+    <script type="module" src="fetch.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
