--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js" defer></script>
-    <script type="module" src="render.js" defer></script>
-    <script type="module" src="fetch.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -29,8 +26,12 @@
       <p>Copyright © 2023 CrystalSnake</p>
       <p>
         Forecast from
-        <a href="https://openweathermap.org">openweathermap.org</a>
+        <a href="https://www.weatherapi.com/">weatherapi</a>
       </p>
     </footer>
+
+    <script type="module" src="script.js"></script>
+    <script type="module" src="render.js"></script>
+    <script type="module" src="fetch.js"></script>
   </body>
 </html>
