Change style weather render

--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
       <h1>Weather App</h1>
       <div class="search">
         <label for="search">Search location</label>
-        <input id="search" type="text" />
+        <input id="search" type="text" placeholder="Enter city name" />
         <button id="search-btn">Search</button>
       </div>
     </header>
     <main>
       <div class="container">
         <h2 class="location"></h2>
-        <div class="weather-container"></div>
+        <div class="weather-container">
+          <p>
+            Please, enter your city in the search field, then click "Search"
+            button.
+          </p>
+        </div>
       </div>
     </main>
     <footer>
-      <p>Copyright © 2023 CrystalSnake</p>
+      <p>
+        Copyright © 2023
+        <a href="https://github.com/CrystalSnake">CrystalSnake</a>
+      </p>
       <p>
         Forecast from
         <a href="https://www.weatherapi.com/">weatherapi</a>
