Fix responsive for mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <h1>Weather App</h1>
+      <div class="logo">
+        <h1>Weather App</h1>
+      </div>
       <div class="search">
         <label for="search">Search location</label>
         <input id="search" type="text" placeholder="Enter city name" />
